sidebar overflow fix

--- a/src/components/neurostack-docs/Sidebar.scss
+++ b/src/components/neurostack-docs/Sidebar.scss
@@ -4,6 +4,7 @@
     border-right: 1px solid lightgrey;
     position: fixed;
     background-color: #f7f7f7;
+    overflow-y: scroll;
 }
 
 .ns-docs-sidebar p{
